# rollit

./: README.md  io.github.elly_code.rollit.yml  meson.build
data/: rollit.desktop.in  rollit.gresource.xml  rollit.gschema.xml  rollit.metainfo.xml.in
po/: README.md  de.po  fr.po  io.github.elly_code.rollit.pot
po/extra/: fr.po
src/: Application.vala  MainWindow.vala
src/Widgets/: Menu.vala  NumDisplay.vala  RollHistory.vala
src/Widgets/Buttons/: MenuItem.vala  PreviousRoll.vala
